--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -1,3 +1,7 @@
-controllers:
-    resource: ../src/Controller/
-    type: attribute
+#index
+#   path: /
+#   controller: App\ControllerDefaultController::index
+acceuil:
+    path: /
+    controller: App\Controller\AccueilController::index
+    
